--- a/index.html
+++ b/index.html
@@ -5,9 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
+    <link rel="stylesheet" href="css/main.css">
     <meta name="author" content="Cesar Savoldi">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pages/historico.html">Histórico</a></li>
+                <li><a href="pages/sobre.html">Sobre</a></li>
+                <li><a href="pages/ajuda.html">Ajuda</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="container">
+        <section class="titulo">
+            <h1>Tudo List</h1>
+        </section>
+
+        <section id="entrada">
+            <input type="text" id="item">
+        </section>
+
+        <section class="tarefa">
+
+        </section>
+    </main>
 </body>
+<script src="js/main.js"></script>
 </html>
